# genie-claw

./: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LOW_LATENCY_HOME_AGENT.md  Makefile  README.md
.cargo/: config.toml
.github/workflows/: auto-label.yml  ci.yml  pr-limit.yml  release.yml
crates/dashboard/: dashboard.js  index.html
crates/genie-api/: Cargo.toml
crates/genie-api/src/: http.rs  routes.rs
crates/genie-common/src/: config.rs  http.rs  jsonl.rs  lib.rs  mode.rs  probe.rs  subprocess.rs  tegrastats.rs
crates/genie-core/: Cargo.toml
crates/genie-core/src/: agent_harness.rs  channel.rs  chat_ui.html  conversation.rs  lib.rs  main.rs  origin_auth.rs  prompt.rs  reasoning.rs  repl.rs  runtime_boundary.rs  server.rs  session.rs  telegram.rs  voice_loop.rs
crates/genie-core/tests/: aec_nlms_bench.rs  calc_input_test.rs  conversation_turn_bench.rs  dream_promote_bench.rs  extract_bench.rs  extract_test.rs  home_action_canon_bench.rs  home_action_canon_test.rs  language_detect_bench.rs  language_detect_test.rs  memory_recall.rs  policy_bench.rs  policy_corpus_test.rs  (+9 more)
deploy/: setup-jetson.sh
deploy/config/: geniepod.dev.toml  geniepod.toml
deploy/homeassistant/: README.md  docker-compose.yml
deploy/scripts/: genie-disable-gui.sh  genie-drop-caches.sh
deploy/systemd/: genie-ai-runtime-warmup.service  genie-ai-runtime.service  genie-core.service  genie-governor.service
doc/: configuration.md  deployment-and-ops.md  household-security.md  milestone-1-portable-home-agent.md  overview.md
tests/bfcl/: README.md
tests/memory/: README.md
(+73 files in other folders)
